# ModelKeynes

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
doc/: parameters
src/: bot.cpp  bot.h  botrandomgaussian.cpp  botrandomgaussian.h  good.h  industrialnode.cpp  industrialnode.h  main.cpp  market.cpp  market.h  simulationnetwork.cpp  simulationnetwork.h  types.h
